# spire

./: .dox  .gitignore  .travis.yml  CMakeLists.txt  Interface.cpp  Interface.h  README.md  _context_8h_source.html  _interface_8h_source.html  annotated.html  bootstrap.sh  class_c_p_m___s_p_i_r_e___n_s_1_1_context-members.html  class_c_p_m___s_p_i_r_e___n_s_1_1_context.html  class_c_p_m___s_p_i_r_e___n_s_1_1_interface-members.html  class_c_p_m___s_p_i_r_e___n_s_1_1_interface.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  index.html  pages.html  struct_c_p_m___s_p_i_r_e___n_s_1_1_interface_1_1_unsatisfied_uniform-members.html  struct_c_p_m___s_p_i_r_e___n_s_1_1_interface_1_1_unsatisfied_uniform.html  todo.html
CMake/: SpirePM.cmake
Core/: BaseAssetMan.cpp  CircFIFOSeqCons.hpp  GPUStateManager.h  ShaderMan.h  ShaderProgramMan.cpp  ShaderProgramMan.h  ShaderUniformStateMan.h
Spire/: CMakeLists.txt  Common.h  Context.h  Exceptions.h  Interface.cpp  Interface.h  InterfaceCommon.h  PIPES_README
Spire/AppSpecific/SCIRun/: ArcBall.cpp  ArcBall.h  Camera.cpp  Camera.h  SCIRunInterface.cpp  SCIRunInterface.h  SRCamera.cpp  SRCamera.h  SRCommonAttributes.h  SRCommonUniforms.h  SRGeom.cpp  SRGeom.h  SRInterface.cpp  SRInterface.h  SRUtil.cpp  SRUtil.h  SciBall.cpp  SciBall.h
Spire/Caching/: DataCacheManager.h  OCFile.h  OCFileSystem.h
Spire/Core/: BaseAssetMan.cpp  BaseAssetMan.h  CPM.h  Camera.cpp  Camera.h  CircFIFOSeqCons.hpp  Common.h  CommonUniforms.h  Exceptions.h  FileUtil.cpp  FileUtil.h  FrameManager.h  GLMathUtil.cpp  GLMathUtil.h  GPUStateManager.cpp  GPUStateManager.h  HackedUCRenderer.cpp  HackedUCRenderer.h  Hub.cpp  Hub.h  IBOObject.cpp  IBOObject.h  InterfaceImplementation.cpp  InterfaceImplementation.h  InterfaceLambda.cpp  InterfaceLambda.h  LambdaInterface.cpp  LambdaInterface.h  Log.cpp  Log.h  Math.h  ObjectLambda.cpp  ObjectLambda.h  PassUniformStateMan.cpp  PassUniformStateMan.h  PipeDriver.cpp  PipeDriver.h  PipeInterface.h  ShaderAttributeMan.cpp  ShaderAttributeMan.h  (+18 more)
Spire/Extensions/: Extensions.h  VisualizeNormals.h
Spire/Extensions/SCIRun/: SRCamera.h  SRCommonAttributes.h  SRCommonUniforms.h  SRInterface.cpp  SRInterface.h  SciBall.cpp
Spire/Extensions/Tuvok/: CMakeLists.txt
Spire/High/: AOS_Mat.h  AOS_Quat.h  AOS_Vec.h  AOS_VectorMath.h  BaseAssetMan.cpp  BaseAssetMan.h  Camera.cpp  Camera.h  CircFIFOSeqCons.hpp  FileUtil.cpp  FileUtil.h  FrameManager.h  GLMathUtil.cpp  GLMathUtil.h  GPUStateManager.cpp  GPUStateManager.h  Hub.cpp  Hub.h  HubThread.cpp  InterfaceImplementation.cpp  InterfaceImplementation.h  Log.cpp  Log.h  Math.h  PipeDriver.h  ShaderAttributeMan.cpp  ShaderAttributeMan.h  ShaderMan.cpp  ShaderMan.h  ShaderProgramMan.cpp  ShaderProgramMan.h  ShaderUniformMan.cpp  ShaderUniformMan.h  StateManager.cpp  ThreadMessage.cpp
Spire/High/Tests/: TestShaderAttributeMan.cpp  TestShaderUniformMan.cc
Spire/Meshes/: CappedCylinder.blend  CappedCylinder.dae  CoordAxes.blend  UncappedCylinder.dae  cylinder.dae  sphere.dae
Spire/Pipes/: PipeDriver.cpp
Spire/Pipes/StuPipe/: Driver.cpp  Driver.h
Spire/Shaders/: CappedCylinder.sp  ColorMap.fs  ColorMap.vs  ColorMap.vsh  DirGouraud.vsh  DirGouraudColorMap.fsh  DirGouraudUniformColor.vs  DirPhong.fsh  DirPhong.vsh  GouraudColorMap.vs  GouraudUniformColor.vs  PhongUniformColor.vs  Sphere.sp  UncappedCylinder.sp  UniformColor.fs  UniformColor.vs  todo  uniformColor.fs
Spire/Shaders/Tests/: TestUniformColor.cpp  TestUniformColor.h
Spire/StuPipe/: Driver.cpp  Driver.h  StuIBOObject.cpp  StuIBOObject.h  StuInterface.cpp  StuInterface.h  StuLambdaInterface.h  StuObject.cpp  StuObject.h  StuObjectLambda.cpp  StuObjectLambda.h  StuVBOObject.cpp  StuVBOObject.h
Spire/Testing/: CMakeLists.txt  main.cpp
Spire/Tests/: CMakeLists.txt  CommonTestFixtures.h  GlobalTestEnvironment.cc  GlobalTestEnvironment.cpp  GlobalTestEnvironment.h  TestBaseAssetMan.cc  TestCamera.cc  TestCamera.cpp  TestCamera.h  TestInterface.cpp  TestShaderAttributeMan.cc  TestShaderAttributeMan.cpp  TestShaderUniformMan.cc  TestStuInterface.cc  TestStuInterface.cpp  TestUniformColor.cc  TestUniformColor.h  main.cpp
Spire/high/: HubThread.h  StateManager.h
Tests/: .gitignore  CommonTestFixtures.h  GlobalTestEnvironment.h  TestCamera.cpp  TestCamera.h  TestConcurrentInterface.cpp  TestInterface.cpp  TestShaderAttributeMan.cpp
ToolChains/: iOS.cmake
Tools/AssetConv/: CMakeLists.txt  Main.cpp
Tools/Batch/: BatchContext.cpp  BatchContext.h  CMakeLists.txt  GLXContext.cpp  GLXContext.h  NSContext.h  NSContext.mm  OSMesaContext.cpp  OSMesaContext.h  WGLContext.h  main.cpp
Tools/View/: CMakeLists.txt  GLContext.h  GLWidget.cpp  GLWidget.h  GLWidgetSCIRun.cpp  GLWidgetSCIRun.h  MainWindow.cpp  MainWindow.h  main.cpp
Tools/View/AssetsRaw/: CoordAxes.blend1  CoordAxes.dae  Sphere.dae  UnitArrow.blend  UnitArrow.dae
examples/view/: CMakeLists.txt  GLContext.h  GLWidget.cpp  GLWidget.h  GLWidgetSCIRun.h  MainWindow.h
high/: Common.h  Hub.cpp  Hub.h  Log.cpp  StateManager.cpp  StateManager.h
scripts/: README  bldView.sh  clean.sh  genParams.sh  mclangcomp.sh  runView.sh
spire/: Context.h  Interface.cpp  Interface.h
src/: .gitignore  CMakeLists.txt  Context.h  Exceptions.h  FileUtil.cpp  FileUtil.h  GLInclude.h  Interface.h  Log.cpp  PassUniformStateMan.cpp  ThreadMessage.h  VBOObject.cpp  WinDLLExport.h
src/caching/: OCFile.h  OCFileSystem.h
src/high/: FrameManager.h  HubThread.cpp
src/tools/view/: SpireGLWidget.h
src/view/: CMakeLists.txt  main.cpp
test/: run-tests.sh
test/assetConv/: CMakeLists.txt  Main.cpp
test/batch/: CMakeLists.txt  main.cpp
test/view/: CMakeLists.txt  GLContext.h  GLWidget.cpp  GLWidget.h  GLWidgetSCIRun.cpp  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CommonTestFixtures.h  GlobalTestEnvironment.h  TestCamera.cpp  (+9 more)
tools/SpireTester/: CMakeLists.txt
tools/view/: CMakeLists.txt  GLContext.cpp  GLContext.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  README  SpireGLWidget.cpp  SpireGLWidget.h
(+100 files in other folders)
